@@ -932,10 +932,12 @@ print "{\n	field(ZRVL,\"0\")\n";
 print "		field(ONVL,\"1\")\n";
 print "		field(TWVL,\"2\")\n";
 print "		field(THVL,\"3\")\n";
+print "		field(FRVL,\"4\")\n";
 print "		field(ZRST,\"SETTING DIFFS\")\n";
 print "		field(ONST,\"CHANS NOT FOUND\")\n";
 print "		field(TWST,\"CHANS NOT INIT\")\n";
-print "		field(THST,\"CHANS NOT MON\")\n}\n";
+print "		field(THST,\"CHANS NOT MON\")\n";
+print "		field(FRST,\"FILE READ ERRORS\")\n}\n";
 print "grecord(mbbi,\"%IFO%:FEC-${dcuId}_SDF_PAGE\")\n";
 print "{\n	field(ZRVL,\"0\")\n";
 print "		field(ONVL,\"1\")\n";
