@@ -1,6 +1,11 @@
 ==================================================================================================
 Changes for 2.9.1 release 
 ==================================================================================================
+- Added read file error checking for filter switch settings (somehow, some settings in file >16
+  bits. SDF code now truncates to 16bits and reports a read error to SDF table.
+- Bug Fix (796): Added paging capability to SDF_TABLE to allow listing of up to 400 items.
+  Also cleaned up BURT file reader line parsing to pick up on strings.  Was having problems
+  when strings started with a number and a string contained more than one word.
 - Bug Fix (803): Modified Makefile.linux to not add SDF EPICS variables to the autoBurt.req file.
 - Bug Fix (790): Added difference calc and EPICS records to provide diff between present setpoint
   and BURT request as added feature to SDF. As part of this fix, also:
